Bug 1258650 - Properly use aInputMaskTransform when combining masks. r=Bas, a=sledru

Previously we were ignoring the scale.

--HG--
extra : amend_source : cc94e09c6cf41511bef6930eb23c51c514669fec